<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue"
    tools:context=".ui.signUp.SignUpFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_margin="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/data"
        />

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:cardCornerRadius="20dp"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sign_up"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:hintTextColor="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:endIconDrawable="@drawable/baseline_person_24"
                    app:endIconMode="custom"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etName"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etSurnameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    app:hintTextColor="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:endIconDrawable="@drawable/baseline_person_24"
                    app:endIconMode="custom"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etSurname"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:hintTextColor="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:endIconDrawable="@drawable/baseline_email_24"
                    app:endIconMode="custom"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etEmail"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:hintTextColor="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:endIconMode="password_toggle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etConfirmPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    android:hint="@string/confirm_password"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:endIconMode="password_toggle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etConfirmPassword"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUpRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/sign_up" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_marginTop="10dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textViewHesabınız"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>